--- a/WebDesign2019/artists/sara/sara.css
+++ b/WebDesign2019/artists/sara/sara.css
@@ -7,7 +7,7 @@ Font-family: Helvetica, sans-serif;
 }
 
 Header {
-Background-color: black;
+Background-color: #B64992;
 Padding: 15px; 
 Font-weight: bold; 
 Font-size: 2rem;
@@ -19,7 +19,7 @@ h1 {
 }
 
 Nav {
-Background-color: rgba(224, 0, 131, 0.5);
+Background-color: #923A75;
 Padding: 50px;
 Font-size: 1rem;
 Text-align: center; 
