--- a/annabel/exercise3.css
+++ b/annabel/exercise3.css
@@ -67,7 +67,8 @@ aside {
 @media only screen and (max-width: 600px) {
     
     .body-text {
-        font-size: 20px;
+        font-size: 10px;
         letter-spacing: 0px;
+text-align: inherit;
     }
 }
