--- a/exercise3.css
+++ b/exercise3.css
@@ -69,6 +69,6 @@ aside {
     .body-text {
         font-size: 10px;
         letter-spacing: 0px;
-        Margin: 0;
+        Margin: 10px 0px;
     }
 }
