--- a/artists/annabel/exercise3.css
+++ b/artists/annabel/exercise3.css
@@ -54,7 +54,8 @@ img {
 
 main {
     background-color: #CC4E62;
-    padding: 15px 30px;
+    padding: 15px 50px;
+    margin: 50px;
 }
 
 aside {
@@ -69,5 +70,6 @@ aside {
     .body-text {
         font-size: 15px;
         letter-spacing: 0px;
+        margin: inherit;
     }
 }
